# survival

./: .pre-commit-config.yaml  .typos.toml  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  pyproject.toml  ruff.toml  rust-toolchain.toml  survival.pyi
.cargo/: config.toml
.github/workflows/: bench.yml  coverage.yml  fuzz.yml  lint.yml  msrv.yml  publish.yml  release.yml  rust-ci.yml  rust.yml  security.yml  semver.yml  version-bump.yml
benches/: survfitaj_benchmarks.rs  survival_benchmarks.rs
docs/: repo-layout.md
examples/: python_package_layout.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_brier.rs  fuzz_concordance.rs  fuzz_kaplan_meier.rs  fuzz_nelson_aalen.rs
python/survival/: __init__.py  __init__.pyi  _binding_manifest.py  _binding_utils.py  _sklearn_aft.py  _sklearn_common.py  _sklearn_cox.py  _sklearn_deep.py  _sklearn_ensemble.py  _sklearn_streaming.py  _sklearn_streaming_aft.py  _sklearn_streaming_cox.py  _sklearn_streaming_ensemble.py  _survival.pyi  bayesian.py  causal.py  core.py  data_prep.py  datasets.py  interpretability.py  interval.py  joint.py  missing.py  ml.py  monitoring.py  population.py  pybridge.py  qol.py  r_api.py  r_api.pyi  recurrent.py  regression.py  relative.py  reliability_tools.py  residuals.py  sklearn_compat.py  sklearn_compat.pyi  spatial.py  surv_analysis.py  validation.py
python/tests/: README.md  helpers.py  test_aft_estimator.py  test_array_inputs.py  test_auxiliary_apis.py  test_binding_contract.py  test_calibration_reporting.py  test_case_cohort_and_multistate.py  test_ci_workflows.py  test_classes.py  test_concordance_additional.py  test_core.py  test_dataframe_integration.py  test_deep_surv.py  test_edge_cases.py  test_r_api.py  test_r_package_layout.py  test_regression.py  test_sklearn_compat_additional.py  test_specialized.py  test_surv_analysis.py  test_utilities.py
r/survivalr/: DESCRIPTION  LICENSE  NAMESPACE  README.md
scripts/: check_coverage.py  generate_binding_manifest.py
src/: aareg.py  aareg_taper.py  aeq_surv.py  ag_exact_fit.py  ag_reg_fit.py  ag_surv.py  aggregate_survfit.py  anova_coxph.py  anova_coxph_penal.py  anova_coxphlist.py  anova_coxphms.py  anova_surv_reglist.py  anova_survreg.py  attrassign.py  basehaz.py  blogit.py  brier.py  cch.py  cipoisson.py  clogit.py  concordance.py  constants.rs  cox_zph.py  coxexact_fit.py  coxpenal_df.py  coxpenal_fit.py  error.rs  lib.rs  pyo3_shim.rs  simd_ops.rs  surv.py  surv2.py
src/bayesian/: bayesian_cox.rs  bayesian_extensions.rs  bayesian_parametric.rs  mod.rs
src/causal/: causal_forest.rs  counterfactual_survival.rs  dependent_censoring.rs  double_ml.rs  g_computation.rs  instrumental_variable.rs  ipcw.rs  mod.rs  msm.rs  target_trial.rs  tmle.rs
src/concordance/: basic.rs  common.rs  concordance.rs  concordance1.rs  concordance3.rs  concordance5.rs  mod.rs
src/core/: coxcount1.rs  coxscho.rs  mod.rs  nsk.rs  pspline.rs  survpenal.rs
src/data_prep/: aeq_surv.rs  cluster.rs  collapse.rs  mod.rs  neardate.rs  rttright.rs  strata.rs  surv2data.rs  survcondense.rs  survsplit.rs  tcut.rs  timeline.rs  tmerge.rs
src/datasets/: classic.rs  cohort.rs  common.rs  mod.rs  parser.rs
src/internal/: cox_risk.rs  fenwick.rs  logrank.rs  matrix.rs  mod.rs  numpy_utils.rs  simd.rs  sorting.rs  statistical.rs  typed_inputs.rs  validation.rs
src/interpretability/: ale_plots.rs  changepoints.rs  friedman_h.rs  ice_curves.rs  local_global.rs  mod.rs  survshap.rs  time_varying.rs  variable_groups.rs
src/interval/: interval_censoring.rs  mod.rs
src/joint/: dynamic_prediction.rs  joint_model.rs  mod.rs
src/matrix/: chinv2.rs  cholesky2.rs  mod.rs
src/missing/: mod.rs  multiple_imputation.rs  pattern_mixture.rs
src/ml/: active_learning.rs  adversarial_robustness.rs  attention_cox.rs  config_validation.rs  contrastive_surv.rs  cox_time.rs  deep_pamm.rs  deep_surv.rs  deephit.rs  differential_privacy.rs  distributionally_robust.rs  dynamic_deephit.rs  dysurv.rs  ensemble_surv.rs  federated_learning.rs  galee.rs  gpu_acceleration.rs  gradient_boost.rs  graph_surv.rs  knowledge_distillation.rs  mod.rs  multimodal_surv.rs  neural_mtlr.rs  neural_ode_surv.rs  recurrent_surv.rs  state_space_surv.rs  streaming_survival.rs  survival_forest.rs  survival_transformer.rs  survtrace.rs  temporal_fusion.rs  tracer.rs  transfer_learning.rs  utils.rs
src/monitoring/: drift_detection.rs  mod.rs  model_cards.rs
src/population/: mod.rs  pyears_summary.rs  ratetable.rs  survexp.rs  survexp_us.rs
src/pybridge/: cox_py_callback.rs  mod.rs  pyears3b.rs  pystep.rs
src/python/: cox_py_callback.rs  pyears3b.rs  pystep.rs
src/qol/: mod.rs  qaly.rs  qtwist.rs
src/recurrent/: gap_time.rs  joint_frailty.rs  marginal_models.rs  mod.rs  validation.rs
src/regression/: aareg.rs  agexact.rs  agfit5.rs  blogit.rs  cause_specific_cox.rs  cch.rs  clogit.rs  cox_optimizer.rs  coxfit6.rs  coxph.rs  coxph_detail.rs  coxph_diagnostics.rs  coxph_model.rs  coxph_support.rs  cure_models.rs  elastic_net.rs  exact_ties.rs  fast_cox.rs  finegray_data.rs  finegray_regression.rs  functional_survival.rs  high_dimensional.rs  joint_competing.rs  longitudinal_survival.rs  mod.rs  parametric_survival.rs  recurrent_events.rs  ridge.rs  spline_hazard.rs  survreg6.rs  survreg7.rs  survreg_predict.rs  survregc1.rs
src/relative/: mod.rs  net_survival.rs  relative_survival.rs
src/reliability/: core.rs  mod.rs  warranty.rs
src/residuals/: agmart.rs  coxmart.rs  diagnostics.rs  mod.rs  survfit_resid.rs  survreg_resid.rs
src/scoring/: agscore2.rs  agscore3.rs  common.rs  coxscore2.rs  mod.rs
src/spatial/: mod.rs  network_survival.rs  spatial_frailty.rs
src/specialized/: brier.rs  cch.rs  cipoisson.rs  drift_detection.rs  finegray.rs  mod.rs  model_cards.rs  norisk.rs  pyears_summary.rs  ratetable.rs  statefig.rs  survexp.rs  twoclust.rs  warranty_analysis.rs
src/tests/: common.rs  (+6 more)
survival-pyo3-macros-shim/: Cargo.toml
test/: README.md  doaml.rs  generate_r_expected_values.R  r_expected_values.json  test_dataframe_integration.py  test_deep_surv.py  test_edge_cases.py
(+238 files in other folders)
