[package]
name = "survival"
version = "1.2.7"
edition = "2024"
rust-version = "1.93"
authors = ["Cameron Lyons <cameron.lyons2@gmail.com>"]
description = "A high-performance survival analysis library written in Rust with Python bindings"
license = "MIT"
repository = "https://github.com/Cameron-Lyons/survival"
keywords = [
  "survival-analysis",
  "statistics",
  "biostatistics",
  "cox-regression",
]
categories = ["science", "mathematics"]

[lib]
name = "survival"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.28.1"
numpy = "0.28.0"
ndarray = { version = "0.17.2", features = ["rayon"] }
itertools = "0.14.0"
rayon = "1.11.0"
faer = "0.24.0"
fastrand = "2.3.0"
pulp = "0.22.2"
wide = "1.1.1"
burn = { version = "0.20.1", features = ["autodiff", "ndarray"] }
num_cpus = "1.17.0"

[features]
default = []
extension-module = ["pyo3/extension-module"]
cuda = []

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
divan = "0.1.21"

[build-dependencies]
pyo3-build-config = { version = "0.27.2", features = ["resolve-config"] }

[[bench]]
name = "survival_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.release-native]
inherits = "release"

[profile.bench]
inherits = "release"
debug = true
