[package]
name = "survival"
version = "1.2.16"
edition = "2024"
rust-version = "1.94"
authors = ["Cameron Lyons <cameron.lyons2@gmail.com>"]
description = "A high-performance survival analysis library written in Rust with Python bindings"
license = "MIT"
repository = "https://github.com/Cameron-Lyons/survival"
keywords = [
  "survival-analysis",
  "statistics",
  "biostatistics",
  "cox-regression",
]
categories = ["science", "mathematics"]

[lib]
name = "survival"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28.3", optional = true }
numpy = { version = "0.28.0", optional = true }
ndarray = { version = "0.17.2", features = ["rayon"] }
itertools = "0.14.0"
rayon = "1.12.0"
faer = "0.24.0"
fastrand = "2.4.1"
pulp = "0.22.2"
wide = "1.3.0"
burn = { version = "0.20.1", default-features = false, features = ["autodiff", "ndarray"], optional = true }
num_cpus = "1.17.0"
survival-pyo3-macros-shim = { path = "survival-pyo3-macros-shim" }

[features]
default = []
python = ["dep:numpy", "dep:pyo3", "dep:pyo3-build-config"]
ml = ["dep:burn"]
extension-module = ["python", "pyo3/extension-module"]

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
divan = "0.1.21"

[build-dependencies]
pyo3-build-config = { version = "0.28.2", features = ["resolve-config"], optional = true }

[[bench]]
name = "survival_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.release-native]
inherits = "release"

[profile.bench]
inherits = "release"
debug = true
