[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "survival-rs"
version = "1.0.14"
description = "A high-performance survival analysis library written in Rust with Python bindings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Cameron Lyons", email = "cameron.lyons2@gmail.com" }]
maintainers = [{ name = "Cameron Lyons", email = "cameron.lyons2@gmail.com" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Typing :: Typed",
]
keywords = [
  "survival-analysis",
  "kaplan-meier",
  "cox-regression",
  "statistics",
  "biostatistics",
  "rust",
]

[project.urls]
Repository = "https://github.com/Cameron-Lyons/survival-rs"
Documentation = "https://github.com/Cameron-Lyons/survival-rs#readme"
Issues = "https://github.com/Cameron-Lyons/survival-rs/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "survival"
strip = true

[tool.ruff.lint.per-file-ignores]
"test/*.py" = ["S101", "PT017", "S110", "S603"]
